--- a/index.html
+++ b/index.html
@@ -70,5 +70,81 @@ document.getElementById('pedidoForm').addEventListener('submit', function(event)
 </script>
 
 </body>
+    <style type="text/css">
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+
+}
+
+.header{
+    width: 100%;
+    height: 100px;
+    background-color: black;
+}
+.header img{
+    margin-left: 30px;
+    margin-top: 30px;
+}
+
+.header h2{
+    width: 200px;
+    height: 35px;
+    padding: 2px;
+    background-color: #48D1CC ;
+    border: 1PX solid white;
+    margin-left: 300px;
+    margin-top: -200px;
+    color: #F0F8FF;
+    font-size: 26px;
+    text-align: center;
+}
+
+.header p{
+    text-align: right;
+    margin-top: -90px;
+    margin-right: 200px;
+    font-size: 20px;
+    color: white;
+
+}
+  body{
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        .container {
+            width: 50%;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        input[type="text"], input[type="email"], input[type="tel"], select, textarea, input[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+</style>
+
 </html>
 
