--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ document.getElementById('pedidoForm').addEventListener('submit', function(event)
     window.location.href = whatsappLink;
 });
 </script>
-    <style type="text/css">
+    <style>
 *{
     margin: 0;
     padding: 0;
