Atualização do arquivo index.html com meta tags.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ericton Eletricista</title>
+     <meta name="description" content="Esta é a pagina de contato do eletricista Ericton Boszard. Um dos mais experientes profissionais da área na região.">
+    <meta name="keywords" content="Ericton Boszard eletricista, Ericton eletricista, eletricista em esteio, eletricistas na região do vale dos sinos, Ericton Boszard, Ericton">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://erictoneletricista.vercel.app/">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <style type="text/css">
         * {
